fixed mobile menu button labels

--- a/layouts/partials/essentials/header.html
+++ b/layouts/partials/essentials/header.html
@@ -100,7 +100,7 @@
           <a
             class="btn btn-outline-primary btn-sm"
             href="{{ site.Params.navigation_button_startup.link | relLangURL }}">
-            {{ site.Params.navigation_button_startup.label }}
+            {{ i18n "button_labels.startup" }}
           </a>
         </li>
       {{ end }}
@@ -109,7 +109,7 @@
         <a
           class="btn btn-outline-primary btn-sm ml-1"
           href="{{ site.Params.navigation_button_member.link | relLangURL }}">
-          {{ site.Params.navigation_button_member.label }}
+          {{ i18n "button_labels.member" }}
         </a>
       </li>
     {{ end }}
