--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -16,3 +16,15 @@ h6 {
 .btn {
   @apply rounded-none font-secondary font-semibold uppercase;
 }
+
+.btn-primary {
+  @apply border-primary bg-primary dark:border-darkmode-primary dark:text-dark text-white dark:bg-darkmode-primary transition transform hover:-translate-y-1;
+}
+
+.btn-secondary {
+  @apply border-dark text-dark bg-transparent dark:border-darkmode-primary dark:text-white transition transform hover:-translate-y-1;
+}
+
+.btn-tertiary {
+  @apply border-transparent text-dark bg-transparent dark:border-transparent dark:text-white transition transform hover:-translate-y-1;
+}
