--- a/layouts/founders/list.html
+++ b/layouts/founders/list.html
@@ -1,9 +1,14 @@
 {{ define "main" }}
+  {{ partial "page-header" . }}
+
+
   <section class="section-sm">
     <div class="container">
       <div class="row justify-center">
-        <div class="md:col-10 lg:col-7 text-center">
-          <h2 class="h3 mb-6">{{ .Title }}</h2>
+        <div class="lg:col-10">
+          <div class="content">
+            {{ .Content }}
+          </div>
         </div>
       </div>
     </div>
