--- a/layouts/partials/essentials/header.html
+++ b/layouts/partials/essentials/header.html
@@ -98,7 +98,7 @@
       {{ if site.Params.navigation_button_startup.enable }}
         <li class="mt-4 inline-block lg:hidden">
           <a
-            class="btn btn-outline-primary btn-sm"
+            class="btn btn-primary btn-sm"
             href="{{ site.Params.navigation_button_startup.link | relLangURL }}">
             {{ i18n "button_labels.startup" }}
           </a>
@@ -107,7 +107,7 @@
       {{ if site.Params.navigation_button_member.enable }}
       <li class="mt-4 inline-block lg:hidden">
         <a
-          class="btn btn-outline-primary btn-sm ml-1"
+          class="btn btn-secondary btn-sm ml-4"
           href="{{ site.Params.navigation_button_member.link | relLangURL }}">
           {{ i18n "button_labels.member" }}
         </a>
@@ -139,7 +139,7 @@
       {{ if site.Params.navigation_button_startup.enable }}
         <a
           href="{{ site.Params.navigation_button_startup.link | relLangURL }}"
-          class="btn btn-outline-primary btn-sm hidden lg:inline-block">
+          class="btn btn-primary btn-sm hidden lg:inline-block">
           {{ i18n "button_labels.startup" }}
         </a>
       {{ end }}
@@ -147,7 +147,7 @@
       {{ if site.Params.navigation_button_member.enable }}
       <a
         href="{{ site.Params.navigation_button_member.link | relLangURL }}"
-        class="btn btn-outline-primary btn-sm hidden lg:inline-block ml-1">
+        class="btn btn-secondary btn-sm hidden lg:inline-block ml-4">
         {{ i18n "button_labels.member" }}
       </a>
     {{ end }}
