--- a/layouts/partials/announcement.html
+++ b/layouts/partials/announcement.html
@@ -2,8 +2,8 @@
 {{ with .Site.Params.announcement }}
   {{ if .enable }}
     <div id="announcement" class="announcement announcement-hide">
-      <a href="{{ .link }}" target="_blank" class="announcement-link">
-        {{ i18n .content_key | markdownify }}
+      <a href='{{ i18n "announcement.link" | safeURL }}' target="_blank" class="announcement-link">
+        {{ i18n "announcement.message" | markdownify }}
       </a>
       <button id="announcement-button" class="announcement-button">
         &times;
