--- a/layouts/partials/announcement.html
+++ b/layouts/partials/announcement.html
@@ -1,14 +1,14 @@
 <!-- announcement -->
 {{ with .Site.Params.announcement }}
   {{ if .enable }}
-    <div id="announcement" class="announcement announcement-hide">
-      <a href='{{ i18n "announcement.link" | safeURL }}' target="_blank" class="announcement-link">
-        {{ i18n "announcement.message" | markdownify }}
-      </a>
-      <button id="announcement-button" class="announcement-button">
-        &times;
-      </button>
-    </div>
+    <a href='{{ i18n "announcement.link" | safeURL }}' target="_blank" class="announcement-link">
+      <div id="announcement" class="announcement announcement-hide">
+        <p>
+          {{ i18n "announcement.message" | markdownify }}
+          <i class="fa fa-arrow-right pl-2"></i>
+        </p>
+      </div>
+    </a>
 
     <!-- announcement style -->
     <style>
