--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,5 +1,9 @@
 // Add your own custom styles here
 
+html {
+  @apply scroll-pt-20 md:scroll-pt-24 lg:scroll-pt-28;
+}
+
 body {
   @apply font-medium;
 }
@@ -95,4 +99,52 @@ h6 {
   li {
     @apply text-sm font-medium text-darkmode-dark dark:text-dark
   }
+}
+
+// Mermaid Styles
+
+.mermaid {
+   @apply bg-body dark:bg-darkmode-body #{!important};
+}
+
+.mermaid .node rect {
+  @apply fill-theme-light dark:fill-darkmode-theme-light stroke-border dark:stroke-darkmode-border #{!important};
+}
+
+.mermaid .nodeLabel {
+  @apply text-dark dark:text-darkmode-dark font-primary font-medium #{!important};
+}
+
+.mermaid .cluster rect {
+  @apply fill-body dark:fill-darkmode-body stroke-darkmode-border dark:stroke-border #{!important};
+}
+
+.mermaid .cluster-label {
+  @apply uppercase #{!important};
+}
+
+.mermaid .flowchart-link {
+  @apply stroke-dark dark:stroke-darkmode-dark #{!important};
+}
+
+.mermaid .marker {
+  @apply stroke-dark dark:stroke-darkmode-dark fill-dark dark:fill-darkmode-dark #{!important};
+}
+
+.mermaid .edgeLabel {
+  @apply bg-body dark:bg-darkmode-body text-dark dark:text-darkmode-dark font-primary font-medium #{!important}
+}
+
+.mermaidTooltip {
+  @apply fill-theme-light dark:fill-darkmode-theme-light stroke-border dark:stroke-darkmode-border text-dark dark:text-darkmode-dark font-primary font-medium #{!important};
+  position: absolute;
+  text-align: center;
+  max-width: 200px;
+  padding: 2px;
+  border-radius: 2px;
+  pointer-events: none;
+  z-index: 100;
+}
+.page-columns .column-page-inset {
+  z-index: 100;                     /* default z-index: 998; */
 }
