--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -146,5 +146,47 @@ h6 {
   z-index: 100;
 }
 .page-columns .column-page-inset {
-  z-index: 100;                     /* default z-index: 998; */
+  z-index: 100; /* default z-index: 998; */
+}
+
+// Tooltip
+
+.price-features {
+  li[data-text] {
+    @apply relative; /* making the .tooltip span a container for the tooltip text */
+
+    span:after {
+      content: " [?]"; /* add the [?] at the end of the <li> */
+    }
+
+    &:hover:before {
+      @apply block; /* show the tooltip on hover */
+    }
+  }
+
+  a {
+    @apply no-underline text-black; /* No underline and black color */
+  }
+
+  li[data-text]:before {
+    content: attr(data-text); /* here's the magic */
+    @apply absolute left-1/2 text-white text-center bg-black;
+
+    transform: translateX(-50%); /* horizontally center */
+
+    top: 90%; /* move to bottom */
+    margin-top: 10px;
+
+    clip-path: polygon(
+      0% calc(0% + 10px),
+      calc(50% - 10px) calc(0% + 10px),
+      50% 0,
+      calc(50% + 10px) calc(0% + 10px),
+      100% calc(0% + 10px),
+      100% 100%,
+      0% 100%
+    );
+
+    @apply hidden w-[400px] p-12 z-10; /* basic styles */
+  }
 }
