--- a/layouts/membership/list.html
+++ b/layouts/membership/list.html
@@ -50,7 +50,7 @@
             </svg>
           </span>
           <span class="ms-2 text-sm font-medium text-gray-800 dark:text-neutral-200">
-            Confirmation
+            Summary
           </span>
         </span>
         <div class="w-full h-px flex-1 bg-theme-light group-last:hidden hs-stepper-success:bg-dark hs-stepper-completed:bg-teal-600 dark:bg-darkmode-theme-light dark:hs-stepper-success:bg-darkmode-dark dark:hs-stepper-completed:bg-teal-600"></div>
@@ -60,7 +60,7 @@
     <!-- End Stepper Nav -->
 
     <!-- Stepper Content -->
-    <div class="mt-5 sm:mt-8">
+    <div class="mt-8 sm:mt-16">
       <!-- First Contnet -->
       <div data-hs-stepper-content-item='{
         "index": 1
@@ -72,7 +72,7 @@
                   {{ range .Params.pricing.plans }}
                   <!-- Card-->
                   <input id="{{ .id }}" type="radio" name="membership" class="hidden peer/{{ .id }} {{ if .multiple }}multiple{{ end }}" value="{{ .name }}">
-                  <label for="{{ .id }}" class="lg:h-full cursor-pointer flex flex-col mx-auto w-full max-w-xl text-gray-900 rounded-2xl bg-theme-light dark:bg-darkmode-theme-light peer-checked/{{ .id }}:outline peer-checked/{{ .id }}:outline-offset-2 peer-checked/{{ .id }}:outline-2 peer-checked/{{ .id }}:outline-dark dark:peer-checked/{{ .id }}:outline-darkmode-dark">
+                  <label for="{{ .id }}" class="lg:h-full cursor-pointer flex flex-col mx-auto w-full max-w-xl border border-border dark:border-darkmode-border text-gray-900 rounded-2xl bg-theme-light dark:bg-darkmode-theme-light peer-checked/{{ .id }}:outline peer-checked/{{ .id }}:outline-offset-2 peer-checked/{{ .id }}:outline-2 peer-checked/{{ .id }}:outline-dark dark:peer-checked/{{ .id }}:outline-darkmode-dark">
                       {{ if .isPopular }}
                       <div class="uppercase bg-dark dark:bg-darkmode-dark rounded-t-2xl p-3 text-center text-darkmode-dark dark:text-dark ">
                           {{ .popularText }}
@@ -149,20 +149,20 @@
         "index": 2
       }' style="display: none;">
           <div id="step-2" class="form-step">
-            <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 bg-white rounded-3xl shadow-[0px_15px_60px_-4px_rgba(16,_24,_40,_0.08)]">
+            <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
                 <!-- Grid -->
                 <div class="space-y-8 lg:grid lg:grid-cols-2 sm:gap-6 xl:gap-8 lg:space-y-0 lg:items-center">
                     <!-- Form -->
                     {{ range .Params.form }}
                     <div class="flex flex-col mx-auto w-full max-w-xl">
-                        <label for="" class="flex gap-1 items-center text-light dark:text-darkmode-light text-base font-medium leading-relaxed">{{ .label }}
+                        <label for="" class="flex gap-1 items-center text-light dark:text-darkmode-light text-base leading-relaxed">{{ .label }}
                             {{ if .required }}
                             <svg xmlns="http://www.w3.org/2000/svg" width="7" height="7" viewBox="0 0 7 7" fill="none">
                                 <path d="M3.11222 6.04545L3.20668 3.94744L1.43679 5.08594L0.894886 4.14134L2.77415 3.18182L0.894886 2.2223L1.43679 1.2777L3.20668 2.41619L3.11222 0.318182H4.19105L4.09659 2.41619L5.86648 1.2777L6.40838 2.2223L4.52912 3.18182L6.40838 4.14134L5.86648 5.08594L4.09659 3.94744L4.19105 6.04545H3.11222Z" fill="#EF4444"/>
                             </svg>
                             {{ end }}
                         </label>
-                        <input type="{{ .type }}" id="{{ .id }}" {{ if .required }} required {{ end }} class="w-full focus:outline-none text-gray-900 placeholder-gray-400 text-lg font-normal leading-relaxed px-5 py-3 rounded-lg shadow-[0px_1px_2px_0px_rgba(16,_24,_40,_0.05)] border border-gray-200 justify-start items-center gap-2 inline-flex" placeholder="{{ .placeholder }}">
+                        <input type="{{ .type }}" id="{{ .id }}" {{ if .required }} required {{ end }} class="w-full focus:outline-none bg-body dark:bg-darkmode-body text-text dark:text-darkmode-text placeholder-border dark:placeholder-darkmode-border text-lg font-normal leading-relaxed px-5 py-3 rounded-lg  border border-border dark:border-darkmode-border justify-start items-center gap-2 inline-flex" placeholder="{{ .placeholder }}">
                     </div>
                     {{ end }}
                 </div>
@@ -187,16 +187,16 @@
       <div data-hs-stepper-content-item='{
         "isFinal": true
       }' style="display: none;">
-        <div class="p-4 h-48 bg-gray-50 flex justify-center items-center border border-dashed border-gray-200 rounded-xl dark:bg-neutral-800 dark:border-neutral-700">
-          <h3 class="text-gray-500 dark:text-neutral-500">
-            Final content
+        <div class="p-4 h-48 flex justify-center items-center border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
+          <h3 class="text-dark dark:text-darkmode-dark">
+            Order Successful
           </h3>
         </div>
       </div>
       <!-- End Final Contnet -->
 
       <!-- Button Group -->
-      <div class="mt-5 flex justify-between items-center gap-x-2">
+      <div class="mt-16 flex justify-between items-center gap-x-2">
         <button type="button" class="py-2 px-3 inline-flex items-center gap-x-1 btn btn-secondary" data-hs-stepper-back-btn="">
           <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="m15 18-6-6 6-6"></path>
@@ -211,9 +211,6 @@
         </button>
         <button type="button" class="py-2 px-3 inline-flex items-center gap-x-1 btn btn-primary disabled:opacity-50 disabled:pointer-events-none" data-hs-stepper-finish-btn="" style="display: none;">
           Finish
-        </button>
-        <button type="reset" class="py-2 px-3 inline-flex items-center gap-x-1  btn btn-primary disabled:opacity-50 disabled:pointer-events-none" data-hs-stepper-reset-btn="" style="display: none;">
-          Reset
         </button>
       </div>
       <!-- End Button Group -->
