--- a/layouts/membership/list.html
+++ b/layouts/membership/list.html
@@ -16,7 +16,7 @@
             </svg>
           </span>
           <span class="ms-2 text-sm font-medium text-gray-800 dark:text-neutral-200">
-            Membership Plan
+            {{ .Params.step_1.title }}
           </span>
         </span>
         <div class="w-full h-px flex-1 bg-theme-light group-last:hidden hs-stepper-success:bg-dark hs-stepper-completed:bg-teal-600 dark:bg-darkmode-theme-light dark:hs-stepper-success:bg-darkmode-dark dark:hs-stepper-completed:bg-teal-600"></div>
@@ -33,7 +33,7 @@
             </svg>
           </span>
           <span class="ms-2 text-sm font-medium text-gray-800 dark:text-neutral-200">
-            Billing Address
+            {{ .Params.step_2.title }}
           </span>
         </span>
         <div class="w-full h-px flex-1 bg-theme-light group-last:hidden hs-stepper-success:bg-dark hs-stepper-completed:bg-teal-600 dark:bg-darkmode-theme-light dark:hs-stepper-success:bg-darkmode-dark dark:hs-stepper-completed:bg-teal-600"></div>
@@ -50,7 +50,7 @@
             </svg>
           </span>
           <span class="ms-2 text-sm font-medium text-gray-800 dark:text-neutral-200">
-            Summary
+            {{ .Params.step_3.title }}
           </span>
         </span>
         <div class="w-full h-px flex-1 bg-theme-light group-last:hidden hs-stepper-success:bg-dark hs-stepper-completed:bg-teal-600 dark:bg-darkmode-theme-light dark:hs-stepper-success:bg-darkmode-dark dark:hs-stepper-completed:bg-teal-600"></div>
@@ -69,26 +69,21 @@
           <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
               <!-- Grid -->
               <div class="lg:auto-rows-max space-y-8 lg:grid lg:grid-cols-3 sm:gap-6 xl:gap-8 lg:space-y-0 lg:items-center">
-                  {{ range .Params.pricing.plans }}
+                  {{ range .Params.step_1.plans }}
                   <!-- Card-->
                   <input id="{{ .id }}" type="radio" name="membership" class="hidden peer/{{ .id }} {{ if .multiple }}multiple{{ end }}" value="{{ .name }}">
                   <label for="{{ .id }}" class="lg:h-full cursor-pointer flex flex-col mx-auto w-full max-w-xl border border-border dark:border-darkmode-border text-gray-900 rounded-2xl bg-theme-light dark:bg-darkmode-theme-light peer-checked/{{ .id }}:outline peer-checked/{{ .id }}:outline-offset-2 peer-checked/{{ .id }}:outline-2 peer-checked/{{ .id }}:outline-dark dark:peer-checked/{{ .id }}:outline-darkmode-dark">
-                      {{ if .isPopular }}
-                      <div class="uppercase bg-dark dark:bg-darkmode-dark rounded-t-2xl p-3 text-center text-darkmode-dark dark:text-dark ">
-                          {{ .popularText }}
-                      </div>
-                      {{ end }}
                       <div class="p-6 xl:py-9 xl:px-12">
                           <h3 class="font-manrope text-2xl font-bold mb-3">{{ .name }}</h3>
                           {{ if .multiple }}
-                          <p class="text-xl text-text dark:text-darkmode-text">from</p>
+                          <p class="text-xl text-text dark:text-darkmode-text">{{ i18n "membership.plan.from" }}</p>
                           <div class="flex items-center mb-6">
                               <span class="font-manrope mr-2 text-6xl font-semibold text-dark dark:text-darkmode-dark">€{{ mul 2 .price }}</span>
                               {{ else }}
                           <div class="flex items-center mb-6">
                               <span class="font-manrope mr-2 text-6xl font-semibold text-dark dark:text-darkmode-dark">€{{ .price }}</span>
                               {{ end }}
-                              <span class="text-xl text-text dark:text-darkmode-text">/ year</span>
+                              <span class="text-xl text-text dark:text-darkmode-text">{{ i18n "membership.plan.per_year" }}</span>
                           </div>
   
                           <!-- List -->
@@ -116,10 +111,10 @@
                   <div class="w-full flex justify-between items-center gap-x-3">
                   <div>
                       <span class="block font-medium text-xl text-dark dark:text-darkmode-dark">
-                      Members
+                      {{ i18n "membership.plan.persons" }}
                       </span>
-                      <span class="block text-sm text-text dark:text-darkmode-text">
-                      €2.000 per person
+                      <span class="block text-sm text-text dark:text-darkmode-text"><span id="unit-price">€2.000</span>
+                      {{ i18n "membership.plan.per_person" }}
                       </span>
                   </div>
                   <div class="flex items-center gap-x-1.5">
@@ -153,9 +148,9 @@
                 <!-- Grid -->
                 <div class="space-y-8 lg:grid lg:grid-cols-2 sm:gap-6 xl:gap-8 lg:space-y-0 lg:items-center">
                     <!-- Form -->
-                    {{ range .Params.form }}
+                    {{ range .Params.step_2.form }}
                     <div class="flex flex-col mx-auto w-full max-w-xl">
-                        <label for="" class="flex gap-1 items-center text-light dark:text-darkmode-light text-base leading-relaxed">{{ .label }}
+                        <label for="{{ .id }}" class="flex gap-1 items-center text-light dark:text-darkmode-light text-base leading-relaxed">{{ .label }} {{ if .hint }} <span class="text-border dark:text-darkmode-border">({{.hint}})</span> {{ end }}
                             {{ if .required }}
                             <svg xmlns="http://www.w3.org/2000/svg" width="7" height="7" viewBox="0 0 7 7" fill="none">
                                 <path d="M3.11222 6.04545L3.20668 3.94744L1.43679 5.08594L0.894886 4.14134L2.77415 3.18182L0.894886 2.2223L1.43679 1.2777L3.20668 2.41619L3.11222 0.318182H4.19105L4.09659 2.41619L5.86648 1.2777L6.40838 2.2223L4.52912 3.18182L6.40838 4.14134L5.86648 5.08594L4.09659 3.94744L4.19105 6.04545H3.11222Z" fill="#EF4444"/>
@@ -174,12 +169,60 @@
       <!-- Third Contnet -->
       <div data-hs-stepper-content-item='{
         "index": 3
-      }' style="display: none;">
-        <div class="p-4 h-48 bg-gray-50 flex justify-center items-center border border-dashed border-gray-200 rounded-xl dark:bg-neutral-800 dark:border-neutral-700">
-          <h3 class="text-gray-500 dark:text-neutral-500">
-            Third content
-          </h3>
+      }' style="display: none;" class="space-y-4 md:space-y-8">
+        <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
+          <!-- Summary -->
+          <div class="space-y-8 lg:grid lg:grid-cols-2 sm:gap-6 xl:gap-8 lg:space-y-0 lg:items-center">
+            {{ range .Params.step_2.form }}
+            <p id="summary_{{ .id }}" class="summary_key">
+              {{ .label }}: 
+              <span class="summary_value text-dark dark:text-darkmode-dark">
+                --
+              </span>
+            </p>
+            {{ end }}
+          </div>
+          <!-- End Summary -->
         </div>
+        <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
+          <!-- Consents -->
+          <div class="space-y-8">
+            {{ range .Params.step_3.consents }}
+            <div class="flex items-center">
+              <input id="{{ .id }}" type="checkbox" value="" class="w-6 h-6 text-blue-600 bg-body border-border rounded focus:dark dark:focus:darkmode-dark dark:ring-offset-gray-800 focus:ring-2 dark:bg-darkmode-body dark:border-darkmode-border">
+              <label for="{{ .id }}" class="ms-4 text-md text-gray-900 dark:text-gray-300">
+                {{ .label.text }}
+                {{ with .label.link }} 
+                <a href="{{ .ulr }}" class="text-blue-600 dark:text-blue-500 hover:underline">
+                  {{ .text }}
+                </a>
+                {{ end }}
+                {{ if .required }}
+                <svg class="inline ml-2" xmlns="http://www.w3.org/2000/svg" width="7" height="7" viewBox="0 0 7 7" fill="none">
+                    <path d="M3.11222 6.04545L3.20668 3.94744L1.43679 5.08594L0.894886 4.14134L2.77415 3.18182L0.894886 2.2223L1.43679 1.2777L3.20668 2.41619L3.11222 0.318182H4.19105L4.09659 2.41619L5.86648 1.2777L6.40838 2.2223L4.52912 3.18182L6.40838 4.14134L5.86648 5.08594L4.09659 3.94744L4.19105 6.04545H3.11222Z" fill="#EF4444"/>
+                </svg>
+                {{ end }}
+              </label>
+            </div>
+            {{ end }}
+          </div>
+        </div>
+          <!-- End Consents -->
+          <!-- Total -->
+        <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
+          <div id="total" class="flex">
+            <p class="flex-auto text-dark dark:text-darkmode-dark">
+              <span id="total_units">3 &times;</span> <span id="total_plan">
+                Corporate Membership
+              </span>
+              <span class="text-text dark:text-darkmode-text">
+                (€<span id="unit_price">2000</span> per unit)
+              </span>
+            </p>
+            <p id="total_price" class="flex-none text-dark dark:text-darkmode-dark">€6000</p>
+          </div>
+        </div>
+          <!-- End Total -->
       </div>
       <!-- End Third Contnet -->
 
@@ -189,7 +232,7 @@
       }' style="display: none;">
         <div class="p-4 h-48 flex justify-center items-center border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
           <h3 class="text-dark dark:text-darkmode-dark">
-            Order Successful
+            {{ .Params.complete_message }}
           </h3>
         </div>
       </div>
@@ -201,16 +244,16 @@
           <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="m15 18-6-6 6-6"></path>
           </svg>
-          Back
+          {{ i18n "button_labels.back" }}
         </button>
         <button type="button" class="py-2 px-3 inline-flex items-center gap-x-1 btn btn-primary disabled:pointer-events-none" data-hs-stepper-next-btn="">
-          Next
+          {{ i18n "button_labels.next" }}
           <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="m9 18 6-6-6-6"></path>
           </svg>
         </button>
         <button type="button" class="py-2 px-3 inline-flex items-center gap-x-1 btn btn-primary disabled:opacity-50 disabled:pointer-events-none" data-hs-stepper-finish-btn="" style="display: none;">
-          Finish
+          {{ i18n "button_labels.submit" }}
         </button>
       </div>
       <!-- End Button Group -->
