fixed flex wrap in summary

--- a/layouts/membership/list.html
+++ b/layouts/membership/list.html
@@ -210,16 +210,29 @@
           <!-- End Consents -->
           <!-- Total -->
         <div class="mx-auto max-w-7xl px-4 py-4 sm:px-6 sm:py-6 lg:px-8 lg:py-8 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg">
-          <div id="total" class="flex">
-            <p class="flex-auto text-dark dark:text-darkmode-dark">
-              <span id="total_units">3 &times;</span> <span id="total_plan">
+          <div id="total" class="flex flex-wrap">
+            <p class="flex-none text-dark dark:text-darkmode-dark">
+              <span id="total_units">
+                3
+              </span> 
+              &times; 
+              <span id="total_plan">
                 Corporate Membership
               </span>
-              <span class="text-text dark:text-darkmode-text">
-                (€<span id="unit_price">2000</span> per unit)
+            </p>
+            <p class="flex-auto text-text dark:text-darkmode-text">
+              (€
+              <span id="unit_price">
+                2000 
+              </span>
+               per unit)
+            </p>
+            <p class="flex-none text-dark dark:text-darkmode-dark">
+              €
+              <span id="total_price">
+                6000
               </span>
             </p>
-            <p id="total_price" class="flex-none text-dark dark:text-darkmode-dark">€6000</p>
           </div>
         </div>
           <!-- End Total -->
