--- a/layouts/membership/list.html
+++ b/layouts/membership/list.html
@@ -108,31 +108,31 @@
               <!--Grid End-->
               
               <!-- Input Number -->
-              <div class="hidden mx-auto max-w-md mt-16 py-2 px-3 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg" data-hs-input-number="">
-                  <div class="w-full flex justify-between items-center gap-x-3">
+              <div id="multipleInput" class="hidden mx-auto max-w-md mt-16 py-2 px-3 border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light rounded-lg" data-hs-input-number="">
+                <div class="w-full flex justify-between items-center gap-x-3">
                   <div>
-                      <span class="block font-medium text-xl text-dark dark:text-darkmode-dark">
+                    <span class="block font-medium text-xl text-dark dark:text-darkmode-dark">
                       {{ i18n "membership.plan.persons" }}
-                      </span>
-                      <span class="block text-sm text-text dark:text-darkmode-text"><span id="unit-price">€2.000</span>
-                      {{ i18n "membership.plan.per_person" }}
-                      </span>
+                    </span>
+                    <span class="block text-sm text-text dark:text-darkmode-text">
+                      <span id="unit-price">€2.000</span> {{ i18n "membership.plan.per_person" }}
+                    </span>
                   </div>
                   <div class="flex items-center gap-x-1.5">
-                      <button type="button" class="size-12 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-md border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light text-dark dark:text-darkmode-dark shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:hover:bg-neutral-800 dark:focus:bg-neutral-800" tabindex="-1" aria-label="Decrease" data-hs-input-number-decrement="">
+                    <button type="button" class="size-12 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-md border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light text-dark dark:text-darkmode-dark shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:hover:bg-neutral-800 dark:focus:bg-neutral-800" tabindex="-1" aria-label="Decrease" data-hs-input-number-decrement="">
                       <svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                          <path d="M5 12h14"></path>
+                        <path d="M5 12h14"></path>
                       </svg>
-                      </button>
-                      <input class="text-xl p-0 w-12 bg-transparent border-0 text-dark-800 text-center focus:ring-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:appearance-none dark:text-darkmode-dark" style="-moz-appearance: textfield;" type="number" aria-roledescription="Number field" value="0" data-hs-input-number-input="">
-                      <button type="button" class="size-12 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-md border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light text-dark dark:text-darkmode-dark shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:hover:bg-neutral-800 dark:focus:bg-neutral-800" aria-label="Increase" data-hs-input-number-increment="">
+                    </button>
+                    <input class="text-xl p-0 w-12 bg-transparent border-0 text-dark-800 text-center focus:ring-0 [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:appearance-none dark:text-darkmode-dark" style="-moz-appearance: textfield;" type="number" aria-roledescription="Number field" value="0" data-hs-input-number-input="">
+                    <button type="button" class="size-12 inline-flex justify-center items-center gap-x-2 text-sm font-medium rounded-md border border-border dark:border-darkmode-border bg-theme-light dark:bg-darkmode-theme-light text-dark dark:text-darkmode-dark shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:hover:bg-neutral-800 dark:focus:bg-neutral-800" aria-label="Increase" data-hs-input-number-increment="">
                       <svg class="shrink-0 size-3.5" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                          <path d="M5 12h14"></path>
-                          <path d="M12 5v14"></path>
+                        <path d="M5 12h14"></path>
+                        <path d="M12 5v14"></path>
                       </svg>
-                      </button>
+                    </button>
                   </div>
-                  </div>
+                </div>
               </div>
               <!-- End Input Number -->
           </div>
@@ -276,4 +276,6 @@
   </div>
   <!-- End Stepper -->
 </form>
+
+<script src='{{ "/js/orderForm.js" | absURL }}'></script>
 {{ end }}
